--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 defusedxml==0.5.0
 dj-database-url==0.4.1
 Django==1.11
+django-tastypie==0.13.3
 gunicorn==19.6.0
 oauthlib==2.0.2
 psycopg2==2.6.2
