--- a/portal/templates/manifest.json
+++ b/portal/templates/manifest.json
@@ -2,23 +2,23 @@
   "name": "Project Portal",
   "short_name": "Project Portal",
   "icons": [{
-    "src": "icons/icon-128x128.png",
+    "src": "icons/android-icon-128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     }, {
-      "src": "icons/icon-144x144.png",
+      "src": "icons/android-icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     }, {
-      "src": "icons/icon-152x152.png",
+      "src": "icons/android-icon-152x152.png",
       "sizes": "152x152",
       "type": "image/png"
     }, {
-      "src": "icons/icon-192x192.png",
+      "src": "icons/android-icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     }, {
-      "src": "icons/icon-256x256.png",
+      "src": "icons/android-icon-256x256.png",
       "sizes": "256x256",
       "type": "image/png"
     }],
