--- a/portal/templates/manifest.json
+++ b/portal/templates/manifest.json
@@ -24,6 +24,7 @@
     }],
 
   "start_url": "index.html",
+  "display": "standalone",
   "background_color": "#3E4EB8",
   "theme_color": "#2F3BA2"
 }
