--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ Django==1.11
 django-tastypie==0.13.3
 gunicorn==19.6.0
 oauthlib==2.0.2
+olefile==0.44
+Pillow==4.3.0
 psycopg2==2.6.2
 PyJWT==1.4.2
 python-dateutil==2.6.0
@@ -13,5 +15,7 @@ pytz==2017.2
 requests==2.9.1
 requests-oauthlib==0.8.0
 six==1.10.0
+social-auth-app-django==1.1.0
+social-auth-core==1.2.0
 virtualenv==15.1.0
 whitenoise==2.0.6
